fix contributions color scheme in dark mode and being cropped on mobile

--- a/app/components-v3/about/style.module.scss
+++ b/app/components-v3/about/style.module.scss
@@ -2,17 +2,13 @@
 @use "../layout.scss";
 
 .tracker {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .wrapper {
-  height: calc(100vh - layout.$bottom-bar-height);
-
   display: flex;
   justify-content: center;
   align-items: center;
-
-  overflow: hidden;
 }
 
 .items {
@@ -20,7 +16,6 @@
 
   width: 100%;
   max-width: 960px;
-  height: 100%;
 
   display: flex;
   flex-direction: column;
@@ -52,6 +47,8 @@
   .wrapper {
     position: sticky;
     top: 0;
+
+    height: calc(100vh - layout.$bottom-bar-height);
   }
 
   .items {
